[AD-962] Safari tweak to fix misaligned bullet points in admin edit mode

--- a/src/applications/libguides/custom-styles.scss
+++ b/src/applications/libguides/custom-styles.scss
@@ -1841,4 +1841,12 @@ body.editmode {
     .btn-close {
         font-size: 14px;
     }
+    .s-lg-guide-admin-content {
+        li {
+            .clearfix:before {
+                display: unset;
+                content: unset;
+            }
+        }
+    }
 }
